adding screens and connecting screen flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="pick_a_date">PICK A DATE</string>
     <string name="pick_time">PICK TIME</string>
     <string name="lorem_ipsum_sit_dolore">Lorem ipsum</string>
+    <string name="mnu">Menu</string>
 </resources>
