--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,15 @@
     <string name="app_name">Journaler</string>
     <string name="title">Title</string>
     <string name="your_note_content_goes_here">Your note content goes here.</string>
-    <string name="pick_a_date">PICK A DATE</string>
-    <string name="pick_time">PICK TIME</string>
-    <string name="lorem_ipsum_sit_dolore">Lorem ipsum</string>
+    <string name="pick_a_date">Pick a date</string>
+    <string name="pick_time">Pick time</string>
+    <string name="hlp">H</string>
+    <string name="lorem_ipsum_sit_dolore">Lorem ipsum sit dolore</string>
     <string name="mnu">Menu</string>
+    <string name="today">Today</string>
+    <string name="next_seven_days">Next 7 days</string>
+    <string name="todos">TODOs</string>
+    <string name="notes">Notes</string>
+    <string name="synchronize">Synchronize</string>
+    <string name="choose_a_type">Choose a type:</string>
 </resources>
